# SkyView

./: .env.example  .gitignore  README.md
.github/workflows/: deploy.yml  destroy.yml
backend/: Dockerfile  pyproject.toml
backend/src/backend/: agent_loop.py  chat_service.py  guardrails.py  llm.py  logging_config.py  main.py  mcp_tools.py  memory_store.py  paths.py  pricing.py  settings.py  state.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: dashboard.tsx
frontend/src/components/ui/: badge.tsx  scroll-area.tsx  textarea.tsx
frontend/src/lib/: api.ts
scripts/: deploy.sh  destroy.sh  terraform-apply.sh
solana-mcp-minimal/: package-lock.json  package.json  tsconfig.json
solana-mcp-minimal/src/: index.ts
terraform/: github-oidc.tf  main.tf  outputs.tf  variables.tf  versions.tf
